googleVis 0.6.3 [2017-11-09]
----------------------------

Bug fixes 

 o Corrected URL for gvisCalendar documentation by Google
 o Allow for numeric colorvar input for gvisBubbleChart to create 
   a gradient color scale


googleVis 0.6.2 [2017-01-01]
----------------------------

Changes

  o Updated links to omegahat from omegahat.org
    to omegahat.net as requested by CRAN


googleVis 0.6.1 [2016-09-01]
----------------------------

Changes

 o Flash based charts gvisGeoMap and gvisAnnotatedTimeLine will 
   show a warning, reminding users to switch to the HTML5 charts
   gvisGeoChart and gvisAnnotationChart instead.
 
 
Bug fixes 

 o In some cases option settings were not converted 
   porperly into JSON objects.  


googleVis 0.6.0 [2016-07-04]
----------------------------

Changes

 o Changed package dependency from RJSONIO to jsonlite.
   
 o Change demo AnimatedGeoMap to AnimatedGeoChart


googleVis 0.5.10 [2015-08-26]
----------------------------

Bug fixes 

 o Ordered factors were ignored. 
   Thanks to Carsten Langer for reporting this issue.


googleVis 0.5.9 [2015-07-04]
----------------------------

Changes

  * Added note section on width and height to help file of 
    gvisIntensityMap. Thanks to Sarang Brahme for his comment.
   
  * Updated NAMESPACE file to comply with new R CMD checks in R-3.3.0   

googleVis 0.5.8 [2015-01-21]
----------------------------

Changes

* Internal changes to how the internal web server is called, to reflect
  changes in R 3.2.0

googleVis 0.5.7 [2014-12-20]
----------------------------

Changes

* Updated DESCRPITION file to comply with new CRAN policy

* Clarified setting parameters in help file.
  Thanks to Nick Salkowski for his suggestions.

googleVis 0.5.6 [2014-10-12]
----------------------------

Changes

* Rescaled the column "% of World Population" in sample data 
  set "Population" by a factor of 0.01

Bug Fixes

* gvisMotionChart: arguments xvar, yvar, sizevar and colorvar were not 